slightly cleaned up interpolation script and notebook

--- a/notebooks/interpolation_experiment.ipynb
+++ b/notebooks/interpolation_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,57 +52,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scripts.interpolation import save_order_1_approx, normalize_on_sphere"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-30 15:25:50 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n",
-      "2023-07-30 15:25:58 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
+      "2023-07-30 15:39:20 src.utils.experiment_utils INFO     setting all seeds to 123456\n"
      ]
     }
    ],
    "source": [
-    "mt = models.load_model(name = \"gptj\", fp16 = True, device = \"cuda\")"
+    "from scripts.interpolation import save_order_1_approx, normalize_on_sphere"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rough -- Caching Jacobians"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#################################################\n",
-    "h_layer = 8\n",
-    "beta = 2.25\n",
-    "interpolation_steps = 100\n",
-    "#################################################"
+    "# relation = data.load_dataset().filter(relation_names=[\"country capital city\"])[0].set(prompt_templates=[\" {}:\"])\n",
+    "# train, test = relation.split(5)\n",
+    "\n",
+    "# #################################################\n",
+    "# h_layer = 8\n",
+    "# beta = 2.25\n",
+    "# interpolation_steps = 100\n",
+    "# #################################################\n",
+    "\n",
+    "# mt = models.load_model(name = \"gptj\", fp16 = True, device = \"cuda\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "relation = data.load_dataset().filter(relation_names=[\"country capital city\"])[0].set(prompt_templates=[\" {}:\"])\n",
-    "train, test = relation.split(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +193,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading Cached $\\mathcal{W}$ and $b$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +214,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60139b88229b41e9b2d5dc2feac1bd6f",
+       "model_id": "d36ac79be2b74be381445b7c0a5b6e03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +235,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bff2940941745a09731257bb5d19d1a",
+       "model_id": "1a87e4b00a734a2d9f2a06e89c31f615",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "180b1d92fa63487293d4224e73cea09e",
+       "model_id": "7f03db566f1340448ab0938c49ab249e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,7 +277,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bd0a991155740d994c04e74badabdee",
+       "model_id": "3b82d9d01ab54a9cbda1fdfa01626494",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,7 +298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04f1c2cdcc054aacbc29a054bccfcf0b",
+       "model_id": "c5c4c2ba2db241d693743f4167ad36ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b36edcc135244be68e381a358eed08bd",
+       "model_id": "ac9225da911d479e9908e3eef9c5bf48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -341,7 +340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce4f0c4b47344d638fa1697c1160bb54",
+       "model_id": "50d3fb85afa64a2b9ab98e5c80a14c6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -362,7 +361,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63b909b14036491c875c258c73d0ecd4",
+       "model_id": "128f98d7e15b47b0ab8b9ddd3b43ba27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +382,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d9d8d76b79d4cbd88a9922184438dba",
+       "model_id": "a206710b63604a5d8ca2a4a498312958",
        "version_major": 2,
        "version_minor": 0
       },
@@ -404,7 +403,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3b3c6cb2c334c36af40c2396082736a",
+       "model_id": "fe4d9b7a814b434c8443559d6c06dd54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,7 +416,7 @@
     }
    ],
    "source": [
-    "path = \"../results/interpolation\"\n",
+    "path = \"../results/interpolation/country capital city/\"\n",
     "W_norms = []\n",
     "B_norms = []\n",
     "Jh_norms = []\n",
@@ -458,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +466,7 @@
        "Text(0, 0.5, '|| $W$ ||')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -493,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +561,7 @@
        "Text(0, 0.5, '|| $W @ \\\\Delta h$ ||')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -588,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -606,6 +605,13 @@
     "for trial in Jh_norms:\n",
     "    plt.plot(np.linspace(0, 1, interpolation_steps), trial)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
