[WIP] updating tables and figures

--- a/notebooks/efficacy_puzzle.ipynb
+++ b/notebooks/efficacy_puzzle.ipynb
@@ -40,18 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#####################################\n",
-    "relation_name = \"country currency\"\n",
+    "relation_name = \"plays pro sport\"\n",
     "#####################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,36 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--> ../results/sweep-24-trials/gptj/country_currency\n",
-      "    --> ../results/sweep-24-trials/gptj/country_currency/2_country_currency_seed_88810\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/2_country_currency_seed_88810/args-20230606-213844.json\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/2_country_currency_seed_88810/results_all.json\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/2_country_currency_seed_88810/country_currency.json\n",
-      "    --> ../results/sweep-24-trials/gptj/country_currency/3_country_currency_seed_709106\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/3_country_currency_seed_709106/args-20230607-005634.json\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/3_country_currency_seed_709106/results_all.json\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/3_country_currency_seed_709106/country_currency.json\n",
-      "    --> ../results/sweep-24-trials/gptj/country_currency/1_country_currency_seed_71745\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/1_country_currency_seed_71745/results_all.json\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/1_country_currency_seed_71745/args-20230606-210430.json\n",
-      "        --> ../results/sweep-24-trials/gptj/country_currency/1_country_currency_seed_71745/country_currency.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sweep_dict = read_sweep_results(\"../results/sweep-24-trials/gptj/country_currency\")"
+    "sweep_dict = read_sweep_results(\"../results/sweep-24-trials/gptj\", relation_names=[relation_name])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +99,7 @@
      "text": [
       "trial_options=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]\n",
       "layer_options=['emb', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27]\n",
-      "rank_options=[0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240]\n"
+      "rank_options=[0, 8, 16, 24, 32, 40, 48, 56, 64, 72, 80, 88, 96, 104, 112, 120, 128, 136, 144, 152, 160, 168, 176, 184, 192, 200, 208, 216, 224, 232, 240, 248, 256, 264, 272, 280, 288, 296, 304, 312]\n"
      ]
     }
    ],
@@ -136,20 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'layer': 3,\n",
-       " 'beta': AggregateMetric(mean=0.3437500049670537, stdev=0.08454843411382523, stderr=0.017258376844182854, values=[0.5, 0.25, 0.25, 0.30000001192092896, 0.4000000059604645, 0.3499999940395355, 0.30000001192092896, 0.30000001192092896, 0.30000001192092896, 0.45000001788139343, 0.20000000298023224, 0.3499999940395355, 0.20000000298023224, 0.25, 0.3499999940395355, 0.4000000059604645, 0.5, 0.3499999940395355, 0.45000001788139343, 0.4000000059604645, 0.30000001192092896, 0.30000001192092896, 0.3499999940395355, 0.45000001788139343]),\n",
-       " 'recall': AggregateMetric(mean=0.6476973684210526, stdev=0.07518332304912685, stderr=0.015346731553099194, values=[0.8, 0.6111111111111112, 0.47368421052631576, 0.6842105263157895, 0.6, 0.631578947368421, 0.5789473684210527, 0.5263157894736842, 0.631578947368421, 0.7777777777777778, 0.6111111111111112, 0.65, 0.6111111111111112, 0.6111111111111112, 0.631578947368421, 0.6666666666666666, 0.7368421052631579, 0.6666666666666666, 0.7368421052631579, 0.7222222222222222, 0.7222222222222222, 0.6, 0.5789473684210527, 0.6842105263157895]),\n",
-       " 'rank': AggregateMetric(mean=76.66666666666667, stdev=31.841621957571334, stderr=6.499643864887551, values=[40, 150, 50, 130, 80, 60, 80, 80, 70, 40, 150, 60, 60, 40, 50, 60, 50, 100, 70, 100, 120, 60, 70, 70]),\n",
-       " 'efficacy': AggregateMetric(mean=0.9778143274853802, stdev=0.03394062998210194, stderr=0.006928102083729826, values=[1.0, 0.9444444444444444, 1.0, 1.0, 1.0, 0.9473684210526315, 1.0, 1.0, 0.8947368421052632, 0.9444444444444444, 1.0, 0.95, 0.9444444444444444, 1.0, 1.0, 1.0, 0.8947368421052632, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.9473684210526315])}"
+       "{'layer': 6,\n",
+       " 'beta': AggregateMetric(mean=2.46875, stdev=0.5016249636597712, stderr=0.1023937669340495, values=[2.5, 2.5, 2.5, 3.0, 3.0, 1.75, 2.25, 2.5, 3.5, 2.0, 3.0, 1.75, 2.5, 2.25, 1.25, 2.75, 3.0, 2.5, 2.75, 2.5, 2.5, 3.0, 2.25, 1.75]),\n",
+       " 'recall': AggregateMetric(mean=0.7718524188493854, stdev=0.059807805365964375, stderr=0.012208217148525206, values=[0.7760617760617761, 0.8024691358024691, 0.694560669456067, 0.8114754098360656, 0.6769911504424779, 0.7647058823529411, 0.7239819004524887, 0.7528089887640449, 0.7375, 0.7176470588235294, 0.6666666666666666, 0.8326693227091634, 0.7958333333333333, 0.8, 0.8, 0.8143459915611815, 0.7717842323651453, 0.8613445378151261, 0.9, 0.6587301587301587, 0.73828125, 0.8217391304347826, 0.8089430894308943, 0.7959183673469388]),\n",
+       " 'rank': AggregateMetric(mean=117.66666666666667, stdev=66.19080164359865, stderr=13.511140807715902, values=[72, 112, 72, 216, 216, 112, 112, 224, 208, 80, 136, 72, 144, 256, 64, 72, 48, 152, 32, 72, 192, 56, 48, 56]),\n",
+       " 'efficacy': AggregateMetric(mean=0.9402929650492835, stdev=0.014563357028326592, stderr=0.002972732805114608, values=[0.9343629343629344, 0.9259259259259259, 0.9497907949790795, 0.9344262295081968, 0.9557522123893806, 0.9294117647058824, 0.9366515837104072, 0.9662921348314607, 0.95, 0.9529411764705882, 0.925, 0.9362549800796812, 0.9333333333333333, 0.9372549019607843, 0.948, 0.9240506329113924, 0.966804979253112, 0.9327731092436975, 0.9173913043478261, 0.9603174603174603, 0.953125, 0.9478260869565217, 0.9105691056910569, 0.9387755102040817])}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,29 +140,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#########################################################################################################\n",
     "TRIAL_NO = 10\n",
-    "RANK = 70\n",
-    "LAYER = 3\n",
+    "RANK = 192\n",
+    "LAYER = 27\n",
     "#########################################################################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SweepRankResults(rank=70, efficacy=[0.8888888888888888, 0.9444444444444444, 0.9444444444444444], efficacy_successes=[EfficacyTestPair(source=RelationSample(subject='Australia', object='Dollar'), target=RelationSample(subject='Japan', object='Yen')), EfficacyTestPair(source=RelationSample(subject='Hungary', object='Forint'), target=RelationSample(subject='Switzerland', object='Franc')), EfficacyTestPair(source=RelationSample(subject='Japan', object='Yen'), target=RelationSample(subject='Hungary', object='Forint')), EfficacyTestPair(source=RelationSample(subject='Malaysia', object='Ringgit'), target=RelationSample(subject='United Arab Emirates', object='Dirham')), EfficacyTestPair(source=RelationSample(subject='Mexico', object='Peso'), target=RelationSample(subject='Singapore', object='Dollar')), EfficacyTestPair(source=RelationSample(subject='New Zealand', object='Dollar'), target=RelationSample(subject='United Arab Emirates', object='Dirham')), EfficacyTestPair(source=RelationSample(subject='Norway', object='Krone'), target=RelationSample(subject='United Kingdom', object='Pound')), EfficacyTestPair(source=RelationSample(subject='Philippines', object='Peso'), target=RelationSample(subject='Singapore', object='Dollar')), EfficacyTestPair(source=RelationSample(subject='Saudi Arabia', object='Riyal'), target=RelationSample(subject='Malaysia', object='Ringgit')), EfficacyTestPair(source=RelationSample(subject='Singapore', object='Dollar'), target=RelationSample(subject='Indonesia', object='Rupiah')), EfficacyTestPair(source=RelationSample(subject='South Africa', object='Rand'), target=RelationSample(subject='Norway', object='Krone')), EfficacyTestPair(source=RelationSample(subject='Sweden', object='Krona'), target=RelationSample(subject='Norway', object='Krone')), EfficacyTestPair(source=RelationSample(subject='Switzerland', object='Franc'), target=RelationSample(subject='United Kingdom', object='Pound')), EfficacyTestPair(source=RelationSample(subject='United Arab Emirates', object='Dirham'), target=RelationSample(subject='Norway', object='Krone')), EfficacyTestPair(source=RelationSample(subject='United Kingdom', object='Pound'), target=RelationSample(subject='Switzerland', object='Franc')), EfficacyTestPair(source=RelationSample(subject='United States', object='Dollar'), target=RelationSample(subject='Japan', object='Yen'))])"
+       "SweepRankResults(rank=192, efficacy=[0.0, 0.14583333333333334, 0.3458333333333333], efficacy_successes=[])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,23 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Edit: United States -> Dollar <to> Japan -> Yen -- found in beta: 0.0\n",
-      "Edit: Saudi Arabia -> Riyal <to> Malaysia -> Ringgit -- found in beta: 0.05000000074505806\n",
-      "Edit: Singapore -> Dollar <to> Indonesia -> Rupiah -- found in beta: 0.10000000149011612\n",
-      "Edit: Philippines -> Peso <to> Singapore -> Dollar -- found in beta: 0.15000000596046448\n",
-      "Edit: New Zealand -> Dollar <to> United Arab Emirates -> Dirham -- found in beta: 0.15000000596046448\n",
-      "Edit: Switzerland -> Franc <to> United Kingdom -> Pound -- found in beta: 0.15000000596046448\n",
-      "Edit: United Kingdom -> Pound <to> Switzerland -> Franc -- found in beta: 0.4000000059604645\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "efficacy_successes = {s.target.subject : s for s in rank_result.efficacy_successes}\n",
     "\n",
@@ -226,16 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No target match found in faithfulness successes for the following:\n",
-      "Edit: Japan -> Yen <to> Hungary -> Forint\n",
-      "Edit: United Arab Emirates -> Dirham <to> Norway -> Krone\n"
+      "No target match found in faithfulness successes for the following:\n"
      ]
     }
    ],
