--- a/notebooks/figures/sweep_rank.ipynb
+++ b/notebooks/figures/sweep_rank.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_12782/3628729607.py:2: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "/tmp/ipykernel_212152/3628729607.py:2: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(df.to_latex( index=False, float_format=\"%.2f\" ))\n"
      ]
     }
@@ -317,63 +317,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{llllll}\n",
+      "\\begin{tabular}{lrlllll}\n",
       "\\toprule\n",
-      "                  relation & layer &          beta &             rank &      recall@1 &      efficacy \\\\\n",
+      "                  relation &  n\\_range & layer &          beta &     rank &      recall@1 &      efficacy \\\\\n",
       "\\midrule\n",
-      "         adjective antonym &     8 &  2.25 ±  0.00 &  243.67 ±  57.08 &  0.69 ±  0.07 &  0.86 ±  0.04 \\\\\n",
-      "     adjective comparative &    10 &  2.25 ±  0.00 &  121.33 ±  31.97 &  0.98 ±  0.01 &  0.94 ±  0.04 \\\\\n",
-      "     adjective superlative &    10 &  2.25 ±  0.00 &  143.33 ±  48.82 &  0.93 ±  0.02 &  0.99 ±  0.01 \\\\\n",
-      "     characteristic gender &     1 &  2.25 ±  0.00 &   74.00 ±  70.59 &  0.77 ±  0.11 &  0.97 ±  0.04 \\\\\n",
-      "           city in country &     2 &  2.25 ±  0.00 &  115.33 ±  58.92 &  0.44 ±  0.10 &  0.89 ±  0.09 \\\\\n",
-      "               company CEO &     6 &  2.25 ±  0.00 &  173.33 ±  58.00 &  0.06 ±  0.03 &  0.31 ±  0.05 \\\\\n",
-      "                company hq &     6 &  2.25 ±  0.00 &  126.22 ±  25.09 &  0.21 ±  0.06 &  0.49 ±  0.04 \\\\\n",
-      "      country capital city &     3 &  2.25 ±  0.00 &   68.67 ±  43.57 &  0.88 ±  0.07 &  0.99 ±  0.02 \\\\\n",
-      "          country currency &     3 &  2.25 ±  0.00 &   88.67 ±  44.48 &  0.58 ±  0.08 &  0.98 ±  0.03 \\\\\n",
-      "          country language &     1 &  2.25 ±  0.00 &   63.33 ±  57.13 &  0.88 ±  0.09 &  0.99 ±  0.03 \\\\\n",
-      "      country largest city &    10 &  2.25 ±  0.00 &   74.67 ±  48.37 &  0.92 ±  0.05 &  0.99 ±  0.02 \\\\\n",
-      "         food from country &     3 &  2.25 ±  0.00 &  113.00 ±  73.33 &  0.51 ±  0.12 &  0.97 ±  0.05 \\\\\n",
-      "        fruit inside color &     7 &  2.25 ±  0.00 &  107.50 ±  71.55 &  0.65 ±  0.15 &  0.93 ±  0.07 \\\\\n",
-      "       fruit outside color &     5 &  2.25 ±  0.00 &  160.35 ±  79.95 &  0.78 ±  0.15 &  0.83 ±  0.12 \\\\\n",
-      "       landmark in country &     6 &  2.25 ±  0.00 &   97.78 ±  28.17 &  0.36 ±  0.06 &  0.68 ±  0.02 \\\\\n",
-      "     landmark on continent &     4 &  2.25 ±  0.00 &  158.67 ±  42.44 &  0.56 ±  0.13 &  0.91 ±  0.02 \\\\\n",
-      "           name birthplace &     7 &  2.25 ±  0.00 &   91.64 ±  37.42 &  0.92 ±  0.05 &  0.96 ±  0.07 \\\\\n",
-      "               name gender &   emb &  2.25 ±  0.00 &    17.67 ±  5.15 &  0.80 ±  0.16 &  0.94 ±  0.04 \\\\\n",
-      "             name religion &     4 &  2.25 ±  0.00 &   57.00 ±  56.16 &  0.80 ±  0.10 &  0.99 ±  0.02 \\\\\n",
-      "         object superclass &     7 &  2.25 ±  0.00 &   91.33 ±  63.28 &  0.85 ±  0.05 &  0.93 ±  0.03 \\\\\n",
-      "            occupation age &     5 &  2.25 ±  0.00 &   34.67 ±  32.22 &  0.68 ±  0.03 &  1.00 ±  0.00 \\\\\n",
-      "         occupation gender &     4 &  2.25 ±  0.00 &   34.40 ±  31.40 &  0.98 ±  0.04 &  1.00 ±  0.00 \\\\\n",
-      "             person father &     8 &  2.25 ±  0.00 &  217.00 ±  51.81 &  0.07 ±  0.03 &  0.28 ±  0.04 \\\\\n",
-      "person lead singer of band &     8 &  2.25 ±  0.00 &  163.67 ±  68.51 &  0.64 ±  0.09 &  0.84 ±  0.09 \\\\\n",
-      "             person mother &     6 &  2.25 ±  0.00 &  170.67 ±  46.86 &  0.14 ±  0.04 &  0.39 ±  0.05 \\\\\n",
-      "    person native language &     6 &  2.25 ±  0.00 &   92.00 ±  40.46 &  0.65 ±  0.16 &  0.87 ±  0.03 \\\\\n",
-      "         person occupation &     8 &  2.25 ±  0.00 &  131.67 ±  55.52 &  0.49 ±  0.08 &  0.66 ±  0.06 \\\\\n",
-      "   person plays instrument &     9 &  2.25 ±  0.00 &  198.33 ±  55.09 &  0.59 ±  0.10 &  0.76 ±  0.04 \\\\\n",
-      "     person sport position &     5 &  2.25 ±  0.00 &   97.33 ±  54.01 &  0.42 ±  0.15 &  0.74 ±  0.05 \\\\\n",
-      "         person university &     4 &  2.25 ±  0.00 &  153.00 ±  83.18 &  0.64 ±  0.11 &  0.91 ±  0.04 \\\\\n",
-      "           plays pro sport &     6 &  2.25 ±  0.00 &  117.67 ±  66.19 &  0.76 ±  0.06 &  0.94 ±  0.01 \\\\\n",
-      "         pokemon evolution &     7 &  2.25 ±  0.00 &  206.67 ±  69.00 &  0.15 ±  0.05 &  0.25 ±  0.08 \\\\\n",
-      "      president birth year &     6 &  2.25 ±  0.00 &  106.33 ±  53.74 &  0.54 ±  0.14 &  0.84 ±  0.08 \\\\\n",
-      "   president election year &   emb &  2.25 ±  0.00 &   84.67 ±  49.15 &  0.52 ±  0.20 &  0.91 ±  0.09 \\\\\n",
-      "        product by company &     4 &  2.25 ±  0.00 &  158.50 ±  39.32 &  0.31 ±  0.14 &  0.54 ±  0.05 \\\\\n",
-      "   star constellation name &     8 &  2.25 ±  0.00 &  152.00 ±  25.89 &  0.41 ±  0.08 &  0.27 ±  0.04 \\\\\n",
-      " substance phase of matter &     7 &  2.25 ±  0.00 &   60.00 ±  37.45 &  0.87 ±  0.09 &  0.97 ±  0.03 \\\\\n",
-      "     superhero archnemesis &    11 &  2.25 ±  0.00 &  192.00 ±  63.87 &  0.30 ±  0.08 &  0.60 ±  0.10 \\\\\n",
-      "          superhero person &     8 &  2.25 ±  0.00 &  228.33 ±  63.62 &  0.44 ±  0.06 &  0.71 ±  0.07 \\\\\n",
-      "         task done by tool &     5 &  2.25 ±  0.00 &  145.00 ±  57.75 &  0.29 ±  0.10 &  0.76 ±  0.07 \\\\\n",
-      "          task person type &     8 &  2.25 ±  0.00 &  109.67 ±  47.92 &  0.49 ±  0.10 &  0.77 ±  0.10 \\\\\n",
-      "           verb past tense &    11 &  2.25 ±  0.00 &  182.33 ±  63.20 &  0.95 ±  0.03 &  0.97 ±  0.02 \\\\\n",
-      "         word first letter &     7 &  2.25 ±  0.00 &  121.33 ±  48.26 &  0.58 ±  0.09 &  0.91 ±  0.02 \\\\\n",
-      "          word last letter &     6 &  2.25 ±  0.00 &   61.67 ±  48.74 &  0.57 ±  0.13 &  0.83 ±  0.10 \\\\\n",
-      "            word sentiment &     4 &  2.25 ±  0.00 &   94.67 ±  77.69 &  0.63 ±  0.16 &  0.93 ±  0.03 \\\\\n",
-      "             work location &     5 &  2.25 ±  0.00 &  112.67 ±  52.46 &  0.55 ±  0.09 &  0.94 ±  0.06 \\\\\n",
+      "         adjective antonym &       95 &     8 &  2.25 ±  0.00 & 243 ± 57 &  0.69 ±  0.07 &  0.86 ±  0.04 \\\\\n",
+      "     adjective comparative &       57 &    10 &  2.25 ±  0.00 & 121 ± 31 &  0.98 ±  0.01 &  0.94 ±  0.04 \\\\\n",
+      "     adjective superlative &       79 &    10 &  2.25 ±  0.00 & 143 ± 48 &  0.93 ±  0.02 &  0.99 ±  0.01 \\\\\n",
+      "     characteristic gender &        2 &     1 &  2.25 ±  0.00 &  74 ± 70 &  0.77 ±  0.11 &  0.97 ±  0.04 \\\\\n",
+      "           city in country &       21 &     2 &  2.25 ±  0.00 & 115 ± 58 &  0.44 ±  0.10 &  0.89 ±  0.09 \\\\\n",
+      "               company CEO &      287 &     6 &  2.25 ±  0.00 & 173 ± 57 &  0.06 ±  0.03 &  0.31 ±  0.05 \\\\\n",
+      "                company hq &      163 &     6 &  2.25 ±  0.00 & 126 ± 25 &  0.21 ±  0.06 &  0.49 ±  0.04 \\\\\n",
+      "      country capital city &       24 &     3 &  2.25 ±  0.00 &  68 ± 43 &  0.88 ±  0.07 &  0.99 ±  0.02 \\\\\n",
+      "          country currency &       23 &     3 &  2.25 ±  0.00 &  88 ± 44 &  0.58 ±  0.08 &  0.98 ±  0.03 \\\\\n",
+      "          country language &       14 &     1 &  2.25 ±  0.00 &  63 ± 57 &  0.88 ±  0.09 &  0.99 ±  0.03 \\\\\n",
+      "      country largest city &       24 &    10 &  2.25 ±  0.00 &  74 ± 48 &  0.92 ±  0.05 &  0.99 ±  0.02 \\\\\n",
+      "         food from country &       26 &     3 &  2.25 ±  0.00 & 113 ± 73 &  0.51 ±  0.12 &  0.97 ±  0.05 \\\\\n",
+      "        fruit inside color &        6 &     7 &  2.25 ±  0.00 & 107 ± 71 &  0.65 ±  0.15 &  0.93 ±  0.07 \\\\\n",
+      "       fruit outside color &        9 &     5 &  2.25 ±  0.00 & 160 ± 79 &  0.78 ±  0.15 &  0.83 ±  0.12 \\\\\n",
+      "       landmark in country &       91 &     6 &  2.25 ±  0.00 &  97 ± 28 &  0.36 ±  0.06 &  0.68 ±  0.02 \\\\\n",
+      "     landmark on continent &        5 &     4 &  2.25 ±  0.00 & 158 ± 42 &  0.56 ±  0.13 &  0.91 ±  0.02 \\\\\n",
+      "           name birthplace &        8 &     7 &  2.25 ±  0.00 &  91 ± 37 &  0.92 ±  0.05 &  0.96 ±  0.07 \\\\\n",
+      "               name gender &        2 &   emb &  2.25 ±  0.00 &   17 ± 5 &  0.80 ±  0.16 &  0.94 ±  0.04 \\\\\n",
+      "             name religion &        5 &     4 &  2.25 ±  0.00 &  57 ± 56 &  0.80 ±  0.10 &  0.99 ±  0.02 \\\\\n",
+      "         object superclass &       10 &     7 &  2.25 ±  0.00 &  91 ± 63 &  0.85 ±  0.05 &  0.93 ±  0.03 \\\\\n",
+      "            occupation age &        2 &     5 &  2.25 ±  0.00 &  34 ± 32 &  0.68 ±  0.03 &  1.00 ±  0.00 \\\\\n",
+      "         occupation gender &        2 &     4 &  2.25 ±  0.00 &  34 ± 31 &  0.98 ±  0.04 &  1.00 ±  0.00 \\\\\n",
+      "             person father &      968 &     8 &  2.25 ±  0.00 & 217 ± 51 &  0.07 ±  0.03 &  0.28 ±  0.04 \\\\\n",
+      "person lead singer of band &       21 &     8 &  2.25 ±  0.00 & 163 ± 68 &  0.64 ±  0.09 &  0.84 ±  0.09 \\\\\n",
+      "             person mother &      962 &     6 &  2.25 ±  0.00 & 170 ± 46 &  0.14 ±  0.04 &  0.39 ±  0.05 \\\\\n",
+      "    person native language &       30 &     6 &  2.25 ±  0.00 &  92 ± 40 &  0.65 ±  0.16 &  0.87 ±  0.03 \\\\\n",
+      "         person occupation &       31 &     8 &  2.25 ±  0.00 & 131 ± 55 &  0.49 ±  0.08 &  0.66 ±  0.06 \\\\\n",
+      "   person plays instrument &        6 &     9 &  2.25 ±  0.00 & 198 ± 55 &  0.59 ±  0.10 &  0.76 ±  0.04 \\\\\n",
+      "     person sport position &       14 &     5 &  2.25 ±  0.00 &  97 ± 54 &  0.42 ±  0.15 &  0.74 ±  0.05 \\\\\n",
+      "         person university &       69 &     4 &  2.25 ±  0.00 & 153 ± 83 &  0.64 ±  0.11 &  0.91 ±  0.04 \\\\\n",
+      "           plays pro sport &        5 &     6 &  2.25 ±  0.00 & 117 ± 66 &  0.76 ±  0.06 &  0.94 ±  0.01 \\\\\n",
+      "         pokemon evolution &       44 &     7 &  2.25 ±  0.00 & 206 ± 68 &  0.15 ±  0.05 &  0.25 ±  0.08 \\\\\n",
+      "      president birth year &       15 &     6 &  2.25 ±  0.00 & 106 ± 53 &  0.54 ±  0.14 &  0.84 ±  0.08 \\\\\n",
+      "   president election year &       18 &   emb &  2.25 ±  0.00 &  84 ± 49 &  0.52 ±  0.20 &  0.91 ±  0.09 \\\\\n",
+      "        product by company &       30 &     4 &  2.25 ±  0.00 & 158 ± 39 &  0.31 ±  0.14 &  0.54 ±  0.05 \\\\\n",
+      "   star constellation name &       31 &     8 &  2.25 ±  0.00 & 152 ± 25 &  0.41 ±  0.08 &  0.27 ±  0.04 \\\\\n",
+      " substance phase of matter &        3 &     7 &  2.25 ±  0.00 &  60 ± 37 &  0.87 ±  0.09 &  0.97 ±  0.03 \\\\\n",
+      "     superhero archnemesis &       90 &    11 &  2.25 ±  0.00 & 192 ± 63 &  0.30 ±  0.08 &  0.60 ±  0.10 \\\\\n",
+      "          superhero person &      100 &     8 &  2.25 ±  0.00 & 228 ± 63 &  0.44 ±  0.06 &  0.71 ±  0.07 \\\\\n",
+      "         task done by tool &       51 &     5 &  2.25 ±  0.00 & 145 ± 57 &  0.29 ±  0.10 &  0.76 ±  0.07 \\\\\n",
+      "          task person type &       32 &     8 &  2.25 ±  0.00 & 109 ± 47 &  0.49 ±  0.10 &  0.77 ±  0.10 \\\\\n",
+      "           verb past tense &       76 &    11 &  2.25 ±  0.00 & 182 ± 63 &  0.95 ±  0.03 &  0.97 ±  0.02 \\\\\n",
+      "         word first letter &       25 &     7 &  2.25 ±  0.00 & 121 ± 48 &  0.58 ±  0.09 &  0.91 ±  0.02 \\\\\n",
+      "          word last letter &       18 &     6 &  2.25 ±  0.00 &  61 ± 48 &  0.57 ±  0.13 &  0.83 ±  0.10 \\\\\n",
+      "            word sentiment &        3 &     4 &  2.25 ±  0.00 &  94 ± 77 &  0.63 ±  0.16 &  0.93 ±  0.03 \\\\\n",
+      "             work location &       24 &     5 &  2.25 ±  0.00 & 112 ± 52 &  0.55 ±  0.09 &  0.94 ±  0.06 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -383,7 +383,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_12782/2347309347.py:2: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "/tmp/ipykernel_212152/2347309347.py:2: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(df.to_latex( index=False, float_format=\"%.2f\" ))\n"
      ]
     }
