added translation baseline for faithfulness -- will replace corner baseline with this

--- a/notebooks/dataset_stats.ipynb
+++ b/notebooks/dataset_stats.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "############################################################\n",
-    "model_name = \"llama-13b\"\n",
+    "model_name = \"gptj\"\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "results_dir = f\"../results/known_samples/\"\n",
     "############################################################\n",
